@@ -1,5 +1,7 @@
 package ru.kfu.search.util;
 
+import org.apache.log4j.Logger;
+
 import java.util.LinkedList;
 import java.util.List;
 
@@ -8,11 +10,18 @@ import java.util.List;
  */
 public class NumberConverter {
 
+    private static Logger LOG = Logger.getLogger(NumberConverter.class);
+
     public List<Integer> convertStringToInt(String numbersStr){
         List<Integer> numbers = new LinkedList<>();
         String[] numbersArr = numbersStr.trim().split(" ");
         for(String num : numbersArr){
-            Integer number = Integer.valueOf(num);
+            Integer number = new Integer(0);
+            try{
+                number = Integer.valueOf(num);
+            }catch(NumberFormatException e){
+
+            }
             numbers.add(number);
         }
         return numbers;
